--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,10 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
-  dataBinding {
-    enabled = true
+  buildFeatures {
+
+    dataBinding = true
+    viewBinding = true
   }
 }
 
